# jotvm

./: LICENSE  README.md  pyproject.toml
examples/: 01_array_funcs.py  02_array_ops.py  03_merge_sort.py  03_merge_sort_incomplete.py
exploration/: replicable_sqrt.py
jotvm/: __init__.py  binary_ops.py  controls.py  debug.py  endo_unary_ops.py  json_patch.py  json_patch_op_base.py  json_patch_ops.py  json_pointer.py  json_types.py  relation_ops.py  trafo_unary_ops.py  utils.py
jotvm/json/: json_factory.py  json_link.py  json_transform.py  json_transform_base.py  json_types.py  json_value.py  tokens.py  types.py
tests/: test_ext_json_patch.py  test_json_binary_ops.py  test_json_conversion.py  test_json_link.py  test_json_patch.py  test_json_patch_ops.py  test_json_pointer.py
